lab3-4/client/client/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
     labels:
       app: client
    spec:
      containers:
        - image: ms-client:latest
          imagePullPolicy: Never
          name: client
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
          ports:
            - containerPort: 80
