lab3-4/client/client/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: client
